# jil

./: CMakeLists.txt  CPPLINT.cfg  README.md
data/: binding.cfg  file_types.cfg  options.cfg  status_fields.cfg
data/ftplugin/c/: lex.cfg  options.cfg
data/ftplugin/cfg/: lex.cfg  options.cfg
data/ftplugin/cpp/: lex.cfg  options.cfg
data/ftplugin/cue/: lex.cfg
data/ftplugin/go/: lex.cfg  options.cfg
data/ftplugin/jil-find_result/: lex.cfg  options.cfg
data/ftplugin/lua/: lex.cfg  options.cfg
data/ftplugin/python/: lex.cfg  options.cfg
data/ftplugin/txt/: options.cfg
data/ftplugin/vb/: lex.cfg  options.cfg
data/ftplugin/xml/: lex.cfg
data/jilfiles/: binding (leader key).cfg  binding.cfg  file_types.cfg  ft.cfg  options.cfg  status_fields.cfg
data/jilfiles/ftplugin/__default/: options.cfg
data/jilfiles/ftplugin/c/: indent.lua  lex.cfg  options.cfg
data/jilfiles/ftplugin/cfg/: indent.lua  lex.cfg  options.cfg
data/jilfiles/ftplugin/cmake/: lex.cfg  options.cfg
data/jilfiles/ftplugin/cpp/: indent.lua  lex.cfg  options.cfg
data/jilfiles/ftplugin/cue/: lex.cfg  options.cfg
data/jilfiles/ftplugin/go/: indent.lua  lex.cfg  options.cfg
data/jilfiles/ftplugin/jil-find_result/: lex.cfg  (+1 more)
data/jilfiles/theme/: Desert.cfg  Night.cfg  Sea.cfg
data/test/chardet/: big5.txt  gb18030.txt  gb2312.txt  latin1.txt  shift_js.txt  utf16be.txt  utf16le.txt  utf8 bom.txt  utf8.txt
data/test/ff/: mac.txt  none.txt  unix.txt  win.txt
data/test/ft_samples/: README.txt
data/test/performance/: README.md
data/theme/: Desert.cfg  Night.cfg  Sea.cfg
doc/: Build Instructions (Mac).txt  Design.odt  Icons.odt  Performance.odt  Plan.odt  Requirements.odt
doc/design/: Jil.asta  Jil.ep  TextBuffer.md
doc/ref/: chardet.html
setup/win32/: jil.nsi  make.bat
src/: CMakeLists.txt
src/app/: CMakeLists.txt  Info.plist.in  about_dialog.cc  about_dialog.h  app.aps  app.cc  app.h  app.rc  binding_config.cc  binding_config.h  bitmap_toggle_button.cc  bitmap_toggle_button.h  book_ctrl.cc  book_ctrl.h  book_frame.cc  book_frame.h  book_page.cc  book_page.h  compile_config.h  config.cc  config.h  defs.cc  defs.h  find_panel.cc  find_panel.h  find_result_page.cc  find_result_page.h  find_thread.cc  find_thread.h  find_window.cc  find_window.h  font_util.cc  font_util.h  ft_config.cc  ft_config.h  goto_dialog.cc  goto_dialog.h  i18n_strings.h  i18n_util.h  id.h  (+50 more)
src/app/icon/: README.txt  editor_icon_bundle.xcf
src/app/pref/: advanced_editor_config_dialog.cc  advanced_editor_config_dialog.h  common.cc  common.h  defs.h  dialog_base.cc  editor_comment_page.cc  editor_comment_page.h  editor_config_panel.cc  editor_config_panel.h  editor_dialog.cc  editor_dialog.h  editor_general_page.cc  editor_general_page.h  editor_indent_page.cc  editor_indent_page.h  editor_page.cc  editor_page.h  font_config_dialog.cc  font_config_dialog.h  font_list_ctrl.cc  font_list_ctrl.h  general_config_panel.cc  general_config_panel.h  general_page.cc  general_page.h  global_dialog.cc  global_dialog.h  global_font_page.cc  global_font_page.h  global_general_page.cc  global_general_page.h  global_theme_page.cc  global_theme_page.h  option_list_ctrl.cc
src/base/: CMakeLists.txt  math_util.cc  math_util.h  string_util.cc  string_util.h
src/editor/: CMakeLists.txt  action.cc  action.h  action_unittest.cc  binding.cc  binding.h  buffer_listener.h  color.cc  color.h  compile_config.h  defs.h  file_io.cc  file_io.h  ft_plugin.cc  ft_plugin.h  indent.cc  indent.h  indent_cfg.cc  indent_cfg.h  indent_cfg_unittest.cc  indent_cpp.cc  indent_cpp.h  indent_cpp_unittest.cc  indent_unittest.cc  key.cc  key.h  lex.cc  lex.h  line_nr_area.cc  line_nr_area.h  lua_proxy.cc  lua_proxy.h  option.cc  option.h  relite.cc  relite.h  relite_unittest.cc  renderer.cc  renderer.h  selection.cc  (+38 more)
src/editor_unittest/: CMakeLists.txt  action_unittest.cc  indent_test_base.cc  indent_test_c.cc  indent_test_cfg.cc  indent_test_cpp.cc  indent_test_go.cc  relite_unittest.cc  tab_util_unittest.cc  text_buffer_unittest.cc  text_range_unittest.cc  wrap_line_unittest.cc  wrap_unittest.cc
src/gtest/: CMakeLists.txt
src/indent_unittest/: CMakeLists.txt  indent_c_unittest.cc  indent_cfg_unittest.cc  indent_cpp_unittest.cc  indent_test_base.cc  indent_test_base.h  indent_test_c.cc  indent_test_cfg.cc  indent_test_cpp.cc  indent_test_go.cc
src/jil/: CMakeLists.txt  about_dialog.cc  about_dialog.h  app.cc  app.h  app.rc  binding_config.cc  binding_config.h  book_ctrl.cc  book_ctrl.h  book_frame.cc  book_frame.h  book_page.h  compile_config.h  config.cc  config.h  defs.cc  defs.h  find_panel.cc  find_panel.h  find_result_page.cc  find_result_page.h  find_thread.cc  find_thread.h  font_util.cc  font_util.h  ft_config.cc  ft_config.h  goto_dialog.cc  goto_dialog.h  i18n_strings.h  i18n_util.h  id.h  lex_config.cc  lex_config.h  log.cc  log.h  navigation_dialog.cc  navigation_dialog.h  option.cc  (+27 more)
src/jil/pref/: common.cc  common.h  dialog_base.cc  dialog_base.h  editor_comment_page.cc  editor_comment_page.h  editor_dialog.cc  editor_dialog.h  editor_general_page.cc  editor_general_page.h  editor_indent_page.cc  editor_indent_page.h  global_dialog.cc  global_dialog.h  global_font_page.cc  global_font_page.h  global_general_page.cc  global_general_page.h  global_theme_page.cc  global_theme_page.h  option_list_ctrl.cc  option_list_ctrl.h
src/libconfig/: CMakeLists.txt
src/lua/: CMakeLists.txt
src/pugixml/: CMakeLists.txt  pugiconfig.hpp
src/uchardet/: CMakeLists.txt
src/ui/: CMakeLists.txt  bitmap_button.cc  bitmap_button.h  bitmap_button_base.cc  bitmap_button_base.h  bitmap_toggle_button.cc  bitmap_toggle_button.h  bold_item_combo_box.cc  bold_item_combo_box.h  button_base.cc  button_base.h  button_style.cc  button_style.h  color.cc  color.h  combo_box.cc  combo_box.h  font_preview_ctrl.cc  font_preview_ctrl.h  label.cc  label.h  label_ctrl.cc  label_ctrl.h  property_list.cc  property_list.h  separator.h  static_box.cc  static_box.h  string_list_ctrl.cc  string_list_ctrl.h  text_button.cc  text_button.h  util.cc  util.h
(+14 files in other folders)
